# nein

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
benchmarks/: 0.22.3_ffaca03.txt  0.24.3_47bd32e.txt  0.24.3_490704e.txt  0.24.3_52615a8.txt  0.24.3_7500070.txt  0.24.3_7a8b185.txt  0.24.3_875d21e.txt  0.90.0_3b3641b.txt  history.tsv
benchmarks/latest/bridge_firewall_large_render/base/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/latest/bridge_firewall_large_render/report/: index.html
benchmarks/latest/bridge_firewall_large_to_firewall/base/: benchmark.json  estimates.json
benchmarks/latest/bridge_firewall_large_to_firewall/new/: sample.json  tukey.json
benchmarks/latest/bridge_firewall_large_to_firewall/report/: index.html
benchmarks/latest/bridge_firewall_large_validate/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmarks/latest/bridge_firewall_large_validate/report/: index.html
benchmarks/latest/bridge_firewall_small_render/base/: benchmark.json  estimates.json  tukey.json
benchmarks/latest/bridge_firewall_small_render/new/: sample.json
benchmarks/latest/bridge_firewall_small_render/report/: index.html
benchmarks/latest/bridge_firewall_small_to_firewall/base/: benchmark.json  sample.json  tukey.json
benchmarks/latest/bridge_firewall_small_to_firewall/new/: estimates.json
benchmarks/latest/bridge_firewall_small_to_firewall/report/: index.html
benchmarks/latest/bridge_firewall_small_validate/base/: benchmark.json  estimates.json  tukey.json
benchmarks/latest/bridge_firewall_small_validate/new/: sample.json
benchmarks/latest/bridge_firewall_small_validate/report/: index.html
benchmarks/latest/bridge_large_render/base/: benchmark.json  estimates.json
benchmarks/latest/bridge_large_render/change/: estimates.json
benchmarks/latest/bridge_large_render/new/: sample.json  tukey.json
benchmarks/latest/bridge_large_render/report/: index.html
benchmarks/latest/bridge_large_to_firewall/base/: benchmark.json  estimates.json  tukey.json
benchmarks/latest/bridge_small_render/base/: benchmark.json
benchmarks/latest/report/: index.html
docs/: api-surface.snapshot  doc-health.md
docs/architecture/: overview.md
docs/benchmarks/: history.csv
docs/decisions/: 0001-render-not-execute.md  0002-validate-before-apply.md  0003-feature-gated-modules.md  0004-raw-match-escape-hatch.md  0005-chain-rule-enum.md  0006-sets-in-tables.md  0007-set-based-isolation.md  0008-typed-enums-over-strings.md  0009-non-exhaustive-structs.md  README.md
docs/development/: capability-map.md  roadmap.md  threat-model.md
docs/guides/: mcp-host-integration.md  testing.md
examples/: host_firewall.rs
fuzz/: config_parse.fcyr  firewall.fcyr  nat.fcyr  rule.fcyr  validate.fcyr
rust-old/: Cargo.toml  Makefile
rust-old/examples/: container_bridge.rs  geoip_blocklist.rs  policy_engine.rs
rust-old/fuzz/: Cargo.toml
rust-old/fuzz/fuzz_targets/: fuzz_rule_render.rs  fuzz_toml_config.rs  fuzz_validation.rs
rust-old/src/: apply.rs  chain.rs  config.rs  engine.rs  inspect.rs  nat.rs  netns.rs  rule.rs  set.rs
rust-old/supply-chain/: audits.toml  config.toml
rust-old/tests/: integration.rs
scripts/: api-surface.sh  bench-regression.sh  bench-track.sh
src/: apply.rs  bridge.rs  builder.rs  chain.rs  config.rs  engine.rs  error.rs  geoip.rs  inspect.rs  lib.rs  main.cyr  mcp.rs  mesh.rs  nat.rs  netns.rs  policy.rs  rule.rs  set.rs  table.rs  validate.rs
src/lib/: apply.cyr  bridge.cyr  builder.cyr  chain.cyr  config.cyr  diff.cyr  engine.cyr  error.cyr  firewall.cyr  geoip.cyr  inspect.cyr  mcp.cyr  mesh.cyr  nat.cyr  netns.cyr  policy.cyr  rule.cyr  set.cyr  sign.cyr  table.cyr  validate.cyr
supply-chain/: audits.toml  config.toml
tests/: nein.bcyr  nein.fcyr  nein.tcyr
tests/integration/: apply_smoke.tcyr  mcp_consume_smoke.tcyr
(+183 files in other folders)
