[package]
name = "nein"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Programmatic nftables firewall — network policy, NAT, port mapping, and service access control for AGNOS"
homepage = "https://github.com/MacCracken/nein"
repository = "https://github.com/MacCracken/nein"
readme = "README.md"
keywords = ["firewall", "nftables", "network", "security", "nat"]
categories = ["os", "network-programming"]

[features]
default = ["rules"]
rules = []
nat = []
policy = []
inspect = []
full = ["rules", "nat", "policy", "inspect"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["process", "sync", "time", "macros", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["net", "process"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
