[package]
name = "nein"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Programmatic nftables firewall — network policy, NAT, port mapping, and service access control for AGNOS"
homepage = "https://github.com/MacCracken/nein"
repository = "https://github.com/MacCracken/nein"
readme = "README.md"
keywords = ["firewall", "nftables", "network", "security", "nat"]
categories = ["os", "network-programming"]

[features]
default = ["nat", "policy", "apply", "builder"]
nat = []
policy = []
inspect = ["apply"]
apply = ["dep:tokio"]
builder = ["nat"]
full = ["nat", "policy", "inspect", "apply", "builder"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["process", "io-util"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
