[package]
name = "nein"
version = "0.21.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Programmatic nftables firewall — network policy, NAT, port mapping, and service access control for AGNOS"
homepage = "https://github.com/MacCracken/nein"
repository = "https://github.com/MacCracken/nein"
readme = "README.md"
keywords = ["firewall", "nftables", "network", "security", "nat"]
categories = ["os", "network-programming"]

[features]
default = ["nat", "policy", "apply", "builder", "bridge", "engine", "mesh"]
nat = []
policy = []
inspect = ["apply"]
apply = ["dep:tokio"]
builder = ["nat"]
bridge = ["nat"]
engine = []
mesh = []
mcp = ["dep:serde_json"]
config = ["dep:toml"]
geoip = []
full = ["nat", "policy", "inspect", "apply", "builder", "bridge", "engine", "mesh", "mcp", "config", "geoip"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }
tracing = "0.1"
tokio = { version = "1", features = ["process", "io-util"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt", "test-util"] }

[[bench]]
name = "benchmarks"
harness = false
